# TinyMock

./: CMakeLists.txt  Makefile  README.md  main.cpp
Tests/: TestMockRepository.cpp  TestTinyMocks.cpp
Tests/Helpers/: ComplexArgument.cpp  ComplexArgument.h  ConcreteNotifier.h  Test.h  TestMock.cpp  TestMock.h  TestNotifier.h
include/: TinyMock.h  TinyMocks.h  yaffut.h
